egress-gateways/virtual-service.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-httbin-through-egress-gateway
spec:
  hosts:
  - httpbin.org
  gateways:
  - httpbin-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
  - match:
    - gateways:
      - httpbin-egressgateway
      port: 80
    route:
    - destination:
        host: httpbin.org
        port:
          number: 80
